[gd_scene load_steps=8 format=3 uid="uid://dg6whk6ygbtpi"]

[ext_resource type="Texture2D" uid="uid://bjtbmeiyntpbv" path="res://Assets/UI/Icons/Templates/Production/production_arrow_head.png" id="1"]
[ext_resource type="Script" path="res://Assets/UI/TabWidgets/ViewComponents/ProductionChain.gd" id="1_8psne"]
[ext_resource type="Texture2D" uid="uid://6lx1jr5eq3qi" path="res://Assets/UI/Icons/Templates/Production/production_arrow_top.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c20b7udu0p0yr" path="res://Assets/UI/Icons/Templates/Production/production_arrow_start.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bladesh07u8hm" path="res://Assets/UI/Icons/Templates/Production/production_arrow_bottom.png" id="4"]
[ext_resource type="PackedScene" path="res://Assets/UI/TabWidgets/Buttons/ActionButton/ActionButtons/PauseProductionButton.tscn" id="11"]
[ext_resource type="PackedScene" path="res://Assets/UI/BasicControls/InventorySlot.tscn" id="12"]

[node name="ProductionChain" type="Control"]
custom_minimum_size = Vector2(200, 51)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 51.0
size_flags_horizontal = 4
script = ExtResource("1_8psne")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="InputOne" parent="MarginContainer/VBoxContainer/TopSection" instance=ExtResource("12")]
layout_mode = 2
size_flags_horizontal = 0
show_if_empty = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopSection"]
layout_mode = 2
theme_override_constants/margin_bottom = -25

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TopSection/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2")

[node name="MiddleSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 51)
layout_mode = 2

[node name="InputTwo" parent="MarginContainer/VBoxContainer/MiddleSection" instance=ExtResource("12")]
layout_mode = 2
size_flags_horizontal = 2
show_if_empty = true

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MiddleSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArrowStart" type="TextureRect" parent="MarginContainer/VBoxContainer/MiddleSection/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -9.0
offset_bottom = 9.0
size_flags_vertical = 4
texture = ExtResource("3")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MiddleSection/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -9.0
offset_right = 47.0
offset_bottom = 9.0
size_flags_vertical = 4
texture = ExtResource("1")

[node name="PauseProductionButton" parent="MarginContainer/VBoxContainer/MiddleSection/Control" instance=ExtResource("11")]
layout_mode = 1

[node name="Output" parent="MarginContainer/VBoxContainer/MiddleSection" instance=ExtResource("12")]
layout_mode = 2
size_flags_horizontal = 10
show_if_empty = true

[node name="BottomSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
show_behind_parent = true
layout_mode = 2

[node name="InputThree" parent="MarginContainer/VBoxContainer/BottomSection" instance=ExtResource("12")]
layout_mode = 2
size_flags_horizontal = 0
show_if_empty = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BottomSection"]
layout_mode = 2
theme_override_constants/margin_top = -25

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/BottomSection/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4")
